# sbpf

./: .gitignore  .npmignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  build.rs  package.json
.github/workflows/: ci.yml  downstream-sbpf-linker.yml
crates/analyzer/: Cargo.toml
crates/analyzer/src/: critical_path.rs  dump_cfg.rs  lib.rs  remove_dead_functions.rs
crates/assembler/: Cargo.toml  Makefile
crates/assembler/src/: ast.rs  astnode.rs  byteparser.rs  debug.rs  debuginfo.rs  dynsym.rs  error.rs  errors.rs  header.rs  instruction.rs  lexer.rs  lib.rs  macros.rs  messages.rs  metrics.rs  opcode.rs  parser.rs  program.rs  sbpf.pest  section.rs  syscall.rs  validator.rs  wasm.rs
crates/assembler/src/optimizer/: canonicalize.rs  mod.rs
crates/assembler/src/parser/: common.rs  default.rs  directive.rs  llvm.rs  mod.rs
crates/assembler/src/preprocessor/: expand.rs  include.rs  macro_def.rs  mod.rs  source_map.rs
crates/assembler/src/tests/: mod.rs
crates/assembler/tests/: debug.rs  regression.rs  syntax.rs
crates/assembler/tests/fixtures/: alu_32_imm.s  alu_32_reg.s  alu_64_imm.s  alu_64_reg.s  be_le_callx.s  calls.s  callx.s  endian.s  entrypoint.s  equ.s  index.toml  internal_call_only.s  jump32_imm.s  jump32_imm_llvm.s  jump32_reg.s  jump32_reg_llvm.s  jumps.s  jumps_imm.s  jumps_reg.s  jumps_uncond.s  ldxdw_large_offset.s  load.s  neg.s  neg64.s  numbers.s  offsets.s  opcodes.s  opcodes_llvm.s  ro_bytearray.s  rodata.s  store_imm.s  store_reg.s
crates/common/: Cargo.toml
crates/common/src/: decode.rs  dynsym.rs  encode.rs  errors.rs  inst_handler.rs  inst_param.rs  instruction.rs  lib.rs  opcode.rs  platform.rs  syscall.rs  syscalls.rs  syscalls_map.rs  token.rs  validate.rs
crates/common/src/execute/: alu32.rs  alu64.rs  call.rs  endian.rs  helpers.rs  jump.rs  load.rs  mod.rs  store.rs  test_utils.rs
crates/debugger/: Cargo.toml
crates/debugger/src/: adapter.rs  debugger.rs  error.rs  execution_cost.rs  input.rs  lib.rs  parser.rs  repl.rs  runner.rs  syscalls.rs
crates/debugger/src/cpi/: context.rs  execution.rs  instruction.rs  mod.rs  serialization.rs
crates/disassembler/: Cargo.toml
crates/disassembler/src/: cursor.rs  elf_header.rs  errors.rs  instructions.rs  lib.rs  opcodes.rs  program.rs  program_header.rs  relocation.rs  rodata.rs  section_header.rs  section_header_entry.rs  wasm.rs
crates/ir/src/: lib.rs
crates/linker/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/src/: config.rs  elf.rs  errors.rs  lib.rs  runtime.rs  serialize.rs
crates/runtime/src/cpi/: mod.rs  request.rs  sync.rs  validate.rs
crates/runtime/src/cpi/builtins/: mod.rs  system.rs
crates/runtime/src/syscalls/: abort.rs  crypto.rs  log.rs  memory.rs  mod.rs  pda.rs  return_data.rs  sysvar.rs
crates/sbpf-ir/: Cargo.toml
crates/sbpf-ir/src/: cfg.rs  dataflow.rs
crates/sbpf-ir/src/graph_engine/: dfs.rs
crates/sbpf-syscall-map/src/: dynamic_map.rs  hash.rs  lib.rs  static_map.rs
crates/sbpf_ir/src/graph_engine/: mod.rs  worklist.rs
crates/syscall-map/: Cargo.toml
crates/syscall-map/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: compute.rs  errors.rs  helpers.rs  lib.rs  memory.rs  syscalls.rs  vm.rs
crates/vm/src/instructions/: alu32.rs  alu64.rs  call.rs  endian.rs  jump.rs  load.rs  mod.rs  store.rs
deploy/: sbpf2-keypair.json
examples/sbpf-asm-counter/: Cargo.toml  README.md
examples/sbpf-asm-counter/src/: lib.rs
examples/sbpf-asm-counter/src/sbpf-asm-counter/: sbpf-asm-counter.s
examples/sbpf-asm-cpi/: Cargo.toml  README.md
examples/sbpf-asm-cpi/src/: lib.rs
examples/sbpf-asm-cpi/src/sbpf-asm-cpi/: sbpf-asm-cpi.s
examples/sbpf-asm-vault/: Cargo.toml  README.md
examples/sbpf-asm-vault/src/: lib.rs
examples/sbpf-asm-vault/src/sbpf-asm-vault/: sbpf-asm-vault.s
npm/: README.md  package.json
src/: config.rs  main.rs
src/commands/: analyze.rs  build.rs  clean.rs  common.rs  debug.rs  deploy.rs  disassemble.rs  init.rs  light_build.rs  link.rs  mod.rs  test.rs
test-project/: Cargo.toml  README.md
test-project/src/: lib.rs
tests/: test_include.rs  test_memo.rs  utils.rs
