[package]
name = "sbpf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A complete toolchain for building and deploying Solana BPF assembly programs"
readme = "README.md"
keywords = ["solana", "bpf", "blockchain", "assembler"]
categories = ["development-tools", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
either = { workspace = true }
rand = "0.8.5"
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
codespan-reporting = "0.12.0"
termcolor = "1.4"

sbpf-assembler = { workspace = true }
sbpf-common = { workspace = true }
sbpf-disassembler = { workspace = true }
sbpf-debugger = { workspace = true }
sbpf-runtime = { workspace = true }
sbpf-vm = { workspace = true }

[dev-dependencies]
hex-literal = "0.4.1"

[workspace]
members = [
    "crates/assembler",
    "crates/common",
    "crates/disassembler",
    "crates/debugger",
    "crates/runtime",
    "crates/sbpf-syscall-map",
    "crates/vm",
]
exclude = ["examples"]

[workspace.package]
version = "0.1.9"
edition = "2024"
license = "MIT"
repository = "https://github.com/blueshift-gg/sbpf"
authors = [
    "Dean Little <dean@blueshift.gg>",
    "Claire Fan <claire@blueshift.gg>",
    "Bidhan A",
]
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0.86"
base64 = "0.22"
either = { version = "1.15.0", features = ["serde"] }
num-derive = "0.4"
num-traits = "0.2"
gimli = { version = "0.33.0", features = ["write"] }
object = "0.38.1"
serde_json = "1.0.122"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
bs58 = "0.5"
sha2 = "0.10"
sha3 = "0.10"
bincode = "1.3"
blake3 = { version = "1.8.3", features = ["traits-preview"] }
solana-address = { version = "2.2.0", features = [
    "atomic",
    "decode",
    "curve25519",
] }
solana-account = "3.2.0"
solana-instruction = "3.2.0"
solana-rent = "3.0.1"
solana-clock = "3.0.1"
solana-epoch-schedule = "3.0.0"
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
solana-program-pack = "3.1.0"
solana-last-restart-slot = "3.0.0"
sbpf-assembler = { path = "crates/assembler", version = "0.1.8" }
sbpf-disassembler = { path = "crates/disassembler", version = "0.1.8" }
sbpf-debugger = { path = "crates/debugger", version = "0.1.8" }
sbpf-common = { path = "crates/common", version = "0.1.8" }
sbpf-syscall-map = { path = "crates/sbpf-syscall-map", version = "0.1.8" }
sbpf-runtime = { path = "crates/runtime", version = "0.1.8" }
sbpf-vm = { path = "crates/vm", version = "0.1.8" }
