[package]
name = "sbpf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A complete toolchain for building and deploying Solana BPF assembly programs"
readme = "README.md"
keywords = ["solana", "bpf", "blockchain", "assembler"]
categories = ["development-tools", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
ed25519-dalek = { version = "3.0.0", features = ["rand_core"] }
either = { workspace = true }
rand = "0.10.2"
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
codespan-reporting = "0.13.1"
termcolor = "1.4"

sbpf-assembler = { workspace = true }
sbpf-common = { workspace = true }
sbpf-disassembler = { workspace = true }
sbpf-debugger = { workspace = true }
sbpf-runtime = { workspace = true }
sbpf-vm = { workspace = true }

[dev-dependencies]
hex-literal = "1.1.0"

[build-dependencies]
toml = { workspace = true }

[workspace]
members = [
    "crates/analyzer",
    "crates/assembler",
    "crates/common",
    "crates/disassembler",
    "crates/debugger",
    "crates/ir",
    "crates/runtime",
    "crates/syscall-map",
    "crates/vm",
    "examples/*",
]
exclude = []

[workspace.package]
version = "0.2.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/blueshift-gg/sbpf"
authors = [
    "Dean Little <dean@blueshift.gg>",
    "Claire Fan <claire@blueshift.gg>",
    "Bidhan A",
]
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0.86"
base64 = "0.22"
either = { version = "1.16.0", features = ["serde"] }
num-derive = "0.4"
num-traits = "0.2"
gimli = { version = "0.33.0", features = ["write"] }
object = "0.39.1"
serde_json = "1.0.150"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.15.2"
thiserror = "2.0.18"
bs58 = "0.5"
sha2 = "0.11.0"
sha3 = "0.12.0"
wincode = "0.5.5"
blake3 = { version = "1.8.5", features = ["traits-preview"] }
toml = "1.1.3"
solana-address = { version = "2.6.1", features = [
    "atomic",
    "decode",
    "curve25519",
] }
solana-account = "4.3.0"
solana-instruction = "3.4.0"
solana-rent = "4.3.0"
solana-clock = "3.1.1"
solana-epoch-schedule = "3.2.0"
solana-system-interface = { version = "3.2.0", features = ["wincode"] }
solana-program-pack = "3.1.0"
solana-last-restart-slot = "3.1.0"
solana-program-error = "3.0.1"
solana-native-token = "3.0.0"
sbpf-assembler = { path = "crates/assembler", version = "0.2.3" }
sbpf-disassembler = { path = "crates/disassembler", version = "0.2.3" }
sbpf-debugger = { path = "crates/debugger", version = "0.2.3" }
sbpf-common = { path = "crates/common", version = "0.2.3" }
sbpf-ir = { path = "crates/ir", version = "0.2.3" }
sbpf-runtime = { path = "crates/runtime", version = "0.2.3" }
sbpf-syscall-map = { path = "crates/syscall-map", version = "0.2.3" }
sbpf-transform = { path = "crates/analyzer", version = "0.2.3" }
sbpf-vm = { path = "crates/vm", version = "0.2.3" }
mollusk-svm = "0.14.0"
mollusk-svm-programs-token = "0.14.0"
