[package]
name = "sbpf-assembler"
version.workspace = true
description = "Assembler for SBPF (Solana BPF) assembly language"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blueshift-gg/sbpf"
keywords = ["solana", "bpf", "assembler", "blockchain"]
categories = ["development-tools", "compilers"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sbpf_assembler"

[dependencies]
num-derive = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
object = "0.37.3"
phf = "0.13.1"
phf_macros = "0.13.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
blake3 = "1"
toml = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
