[package]
name = "sbpf-assembler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Assembler for SBPF (Solana BPF) assembly language"
keywords = ["solana", "bpf", "assembler", "blockchain"]
categories = ["development-tools", "compilers"]
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "sbpf_assembler"

[dependencies]
either = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
sbpf-common = { workspace = true }
phf = "0.13.1"
phf_macros = "0.13.1"
pest = "2.7"
pest_derive = "2.7"
gimli = { version = "0.32.3", features = ["write"] }
codespan = "0.13.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
blake3 = "1"
toml = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
object = { workspace = true }
