[package]
name = "sbpf-common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Common types and utilities for SBPF (Solana BPF)"
keywords = ["solana", "bpf", "blockchain"]
categories = ["development-tools"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sbpf_common"

[dependencies]
num-derive = { workspace = true }
num-traits = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
sbpf-syscall-map = { workspace = true }


[dev-dependencies]
hex-literal = "1.0.0"
