[package]
name = "sbpf-debugger"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
either = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
gimli = { workspace = true }
object = { workspace = true }
bs58 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
solana-address = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
solana-rent = { workspace = true }
solana-clock = { workspace = true }
solana-epoch-schedule = { workspace = true }
sbpf-assembler = { workspace = true }
sbpf-disassembler = { workspace = true }
sbpf-common = { workspace = true }
sbpf-vm = { workspace = true }
