[package]
name = "sbpf-debugger"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Lightweight debugger for SBPF (Solana BPF) bytecode"
keywords = ["solana", "bpf", "vm", "blockchain"]
categories = ["development-tools"]
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
either = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
gimli = { workspace = true }
object = { workspace = true }
bs58 = { workspace = true }
solana-address = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true }
sbpf-assembler = { workspace = true }
sbpf-disassembler = { workspace = true }
sbpf-common = { workspace = true }
sbpf-runtime = { workspace = true }
sbpf-vm = { workspace = true }
