[package]
name = "sbpf-disassembler"
version.workspace = true
description = "Disassembler for SBPF (Solana BPF) bytecode"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blueshift-gg/sbpf"
keywords = ["solana", "bpf", "disassembler", "blockchain"]
categories = ["development-tools"]

[lib]
crate-type = ["cdylib", "lib"]
name = "sbpf_disassembler"

[dependencies]
anyhow = { workspace = true }
hex = "0.4.3"
object = { workspace = true }
sbpf-common = { workspace = true }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
hex-literal = "1.0.0"
