[package]
name = "sbpf-disassembler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Disassembler for SBPF (Solana BPF) bytecode"
keywords = ["solana", "bpf", "disassembler", "blockchain"]
categories = ["development-tools"]
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "sbpf_disassembler"

[dependencies]
either = { workspace = true }
object = { workspace = true }
sbpf-common = { workspace = true }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.92", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
hex-literal = "1.0.0"
